syntax = "proto3";

option go_package = "/gen";
import "google/protobuf/timestamp.proto";


///////////////////////////////////////////////
//                Services                   //
///////////////////////////////////////////////

service FoodService {
  rpc GetRecipe(GetRecipeRequest) returns (GetRecipeResponse);
}

service SportService {
  rpc GetWorkout(GetWorkoutRequest) returns (GetWorkoutResponse);
  rpc GetPerformance(GetPerformanceRequest) returns (GetPerformanceResponse);
}

service ReporterService {
  rpc GetRecipe(GetRecipeRequest) returns (GetRecipeResponse);
  rpc GetWorkout(GetWorkoutRequest) returns (GetWorkoutResponse);
  rpc GetPerformance(GetPerformanceRequest) returns (GetPerformanceResponse);
}

///////////////////////////////////////////////
//                Req / Resp messages        //
///////////////////////////////////////////////


message GetRecipeRequest {
  string recipe_id = 1;
}

message GetRecipeResponse {
  Recipe recipe = 1;
}

message GetWorkoutRequest {
  string workout_id = 1;
}

message GetWorkoutResponse {
  Workout workout = 1;
}

message GetPerformanceRequest {
  string performance_id = 1;
}

message GetPerformanceResponse {
  Performance performance = 1;
}

///////////////////////////////////////////////
//                Types : Sport              //
///////////////////////////////////////////////

message Performance {
  string id = 1;
  google.protobuf.Timestamp date = 2;
  string workout_id = 3;
  repeated ExercisePerformance performances = 4;
}

message ExercisePerformance {
  string id = 1;
  uint32 weight = 2;
  uint32 repetitions = 3;
  uint32 rest_time = 4;
}

message Workout {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated ExercisePlan exercises = 4;
}

message ExercisePlan {
  string id = 1;
  string name = 2;
  string description = 3;
  uint32 series = 4;
  uint32 repetitions = 5;
  uint32 weight = 6;
  uint32 restTime = 7;
}

///////////////////////////////////////////////
//                Types : Food               //
///////////////////////////////////////////////


message Recipe {
  string id = 1;
  string name = 2;
  string description = 3;
  MacroDetail macros = 4;
}

message MacroDetail {
  string id = 1;
  uint32 carbs = 2;
  uint32 protein = 3;
  uint32 fat = 4;
  uint32 calories = 5;
}
